--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.10.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
+    "next-cloudinary": "^6.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
