--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.13",
     "next-cloudinary": "^6.3.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
