--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-table": "^8.15.3",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
