--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.331.0",
-    "next": "14.1.0",
+    "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.13",
     "next-cloudinary": "^6.3.0",
     "next-themes": "^0.3.0",
