--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-paystack": "^5.0.0",
     "react-rating-stars-component": "^2.2.0",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
