--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
